--- a/index.html
+++ b/index.html
@@ -3,32 +3,52 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title></title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<title>Puppy Finder</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/2-col-portfolio.css" rel="stylesheet">
 
 </head>
 
 <body>
-	<h1>What puppies can be mine?</h1>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Puppy Finder</a>
+            </div>
+        </div>
+    </nav>
+
+<!-- Page Content -->
+<div class="container">
+
+    <!-- Page Header -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">What puppies can be mine?
+                <small>Let us tell you.</small>
+            </h1>
+        </div>
+    </div>
+    <!-- /.row -->
+
 	<label for="search">Type your zip code here: </label>
 	<input type="text" id="search" />
 	<input type="button" id="go" value="Puppy me!" />
 
+</div>
 
+<!-- SCRIPTS -->
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="script.js"></script>
+<!-- END SCRIPTS -->
 
-	<div id="results"></div>
-
-	<!-- SCRIPTS -->
-	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-
-	<script src="script.js"></script>
-
-	<!-- END SCRIPTS -->
-
-	<div id="appendstuff"></div>
 </body>
 </html>
