Bootstrap Styling Part One

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 	<input type="text" id="search" />
 	<input type="button" id="go" value="Puppy me!" />
 
+	<div id="content"></div>
+
 </div>
 
 <!-- SCRIPTS -->
