Styling Part Two

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Custom CSS -->
     <link href="css/2-col-portfolio.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
 </head>
 
@@ -43,7 +44,18 @@
 	<input type="text" id="search" />
 	<input type="button" id="go" value="Puppy me!" />
 
-	<div id="content"></div>
+	<div id="content">
+        <div class="col-md-6 portfolio-item">
+            <a href="#">
+                <img class="img-responsive" src="" alt="">
+            </a>
+            <h3>
+                <a href="#"></a>
+            </h3>
+            <p></p>
+        </div>
+
+	</div>
 
 </div>
 
